# Megadune-mapper

./: .gitignore  Experiments_here_and_only_here.ipynb  LICENSE.txt  README.md  apply_unet.py  conf.py  dune_mapping.py  dune_polygons.py  file_path_fixing.py  pyproject.toml  raster_data.py
docs/: apply_unet.rst  conf.py  dune_polygons.rst  file_path_fixing.rst  index.rst  raster_data.rst
megadune_mapper/: __init__.py  apply_unet.py  climate_data.py  dune_polygons.py  file_path_fixing.py  raster_data.py
