[project]
name = "megadune-mapper"
version = "0.1.0"
description = "Codes for automated mapping, morphometric analysis and result visualization for icy bedforms on Earth and Mars based on a Digital Elevation Model (DEM)."
authors = [
    {name = "Jakub Morawski"}
]
license = {text = "GPL-2.0-only"}
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "affine (==2.4.0)",
    "astropy (==7.0.0)",
    "dask (==2025.2.0)",
    "keras (==3.11.3)",
    "matplotlib (==3.10.7)",
    "mpi4py (==4.1.1)",
    "netcdf4 (==1.7.3)",
    "networkx (==3.4.2)",
    "numpy (==2.3.4)",
    "pyproj (==3.7.2)",
    "rasterio (==1.4.3)",
    "rasterstats (==0.20.0)",
    "rioxarray (==0.19.0)",
    "scikit-learn (==1.7.2)",
    "scipy (==1.16.2)",
    "shapely (==2.1.2)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "tensorflow (==2.20.0)",
    "tqdm (==4.67.1)",
    "xarray (==2025.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
